force-app/main/default/objects/Life__c/Life__c.object-meta.xml
<CustomObject>
    <label>Life</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Life ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>