force-app/main/default/objects/Life__c/fields/Assistance__c.field-meta.xml
<CustomField>
    <fullName>Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assistance</label>
    <type>Checkbox</type>
</CustomField>