force-app/main/default/objects/Life__c/fields/Criminal_Convictions__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Convictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Convictions</label>
    <type>Checkbox</type>
</CustomField>