force-app/main/default/objects/Life__c/fields/Drunk_Driving__c.field-meta.xml
<CustomField>
    <fullName>Drunk_Driving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drunk Driving</label>
    <type>Checkbox</type>
</CustomField>