force-app/main/default/objects/Life__c/fields/Family_Cardiovascular__c.field-meta.xml
<CustomField>
    <fullName>Family_Cardiovascular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Cardiovascular</label>
    <type>Checkbox</type>
</CustomField>