force-app/main/default/objects/Life__c/fields/Hazardous_Activities__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Activities</label>
    <type>Checkbox</type>
</CustomField>