force-app/main/default/objects/Life__c/fields/Medical_Test__c.field-meta.xml
<CustomField>
    <fullName>Medical_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Test</label>
    <type>Checkbox</type>
</CustomField>