force-app/main/default/objects/Life__c/fields/Past_Declined__c.field-meta.xml
<CustomField>
    <fullName>Past_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Declined</label>
    <type>Checkbox</type>
</CustomField>