force-app/main/default/objects/Life__c/fields/Tobacco_Usage__c.field-meta.xml
<CustomField>
    <fullName>Tobacco_Usage__c</fullName>
    <label>Tobacco Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>None in the last 5 years</fullName>
            </value>
            <value>
                <fullName>None in the last 4 years</fullName>
            </value>
            <value>
                <fullName>None in the last 3 years</fullName>
            </value>
            <value>
                <fullName>None in the last 2 years</fullName>
            </value>
            <value>
                <fullName>None in the last 1 years</fullName>
            </value>
            <value>
                <fullName>Last 12 months, less than 24 per year</fullName>
            </value>
            <value>
                <fullName>Last 12 months, more than 24 per year</fullName>
            </value>
            <value>
                <fullName>Last 12 months, nicotine replacement (gum, patch, etc)</fullName>
            </value>
            <value>
                <fullName>Last 12 months, cigar use, 12 or less per year</fullName>
            </value>
            <value>
                <fullName>Last 12 months, cigar use, 12 or more per year</fullName>
            </value>
            <value>
                <fullName>Last 12 months, chewing tobacco, pipe or snuff</fullName>
            </value>
            <value>
                <fullName>Last 12 months, marjiuana use, 2 or less per month</fullName>
            </value>
            <value>
                <fullName>Last 12 months, marjiuana use, 2 or more per month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>