force-app/main/default/objects/Life__c/fields/Travel_Advisory__c.field-meta.xml
<CustomField>
    <fullName>Travel_Advisory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Advisory</label>
    <type>Checkbox</type>
</CustomField>