force-app/main/default/objects/Life__c/fields/U_S_Citizen__c.field-meta.xml
<CustomField>
    <fullName>U_S_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>U.S. Citizen</label>
    <type>Checkbox</type>
</CustomField>